fix(sbb-seat-reservation): gap problems in navigation + others (#4619)
- fix gap problems in navigation
- replace SVG icon for bicycle
- rename test data to "private" usage
- some more unit-tests

--- a/src/elements-experimental/seat-reservation/seat-reservation-place-control/seat-reservation-place-control.scss
+++ b/src/elements-experimental/seat-reservation/seat-reservation-place-control/seat-reservation-place-control.scss
@@ -210,8 +210,7 @@ $disabled: '.sbb-reservation-place-control--disabled';
     line-height: initial;
 
     #{$root}--state-free &,
-    #{$root}--state-allocated &,
-    #{$root}--state-restricted#{$root}--type-bicycle & {
+    #{$root}--state-allocated & {
       display: block;
     }
 
